<resources>
    <string name="app_name">Midterm Begimai</string>
    <string name="nike_air">Nike Air Max 270 Rea...</string>
    <string name="nike_air_zoom">Nike Air Zoom Pegasus 36 Miami</string>
    <string name="_299_43">$299,43</string>
    <string name="select_size">Select Size</string>
    <string name="_6">6</string>
    <string name="_6_5">6.5</string>
    <string name="_7">7</string>
    <string name="_7_5">7.5</string>
    <string name="_8">8</string>
    <string name="_8_5">8.5</string>
    <string name="select_color">Select Color</string>
</resources>