<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        style="@style/model_disc"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:srcCompat="@drawable/like" />

    <LinearLayout
        android:id="@id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/star01" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/star01" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/star01" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/star01" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:srcCompat="@drawable/star05" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        style="@style/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <TextView
        android:id="@+id/textView2"
        style="@style/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/textView1"
        app:layout_constraintTop_toBottomOf="@id/textView1" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                style="@style/size_choose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/component"
                android:text="@string/_6" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                style="@style/size_choose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/component"
                android:text="@string/_6_5" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                style="@style/size_choose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/component1"
                android:text="@string/_7" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                style="@style/size_choose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/component"
                android:text="@string/_7_5" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                style="@style/size_choose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/component"
                android:text="@string/_8" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardCornerRadius="40dp">

            <Button
                style="@style/size_choose"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/component"
                android:text="@string/_8_5" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        style="@style/color_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/linear2"
        app:layout_constraintStart_toStartOf="@id/linear1"
        app:layout_constraintTop_toBottomOf="@id/linear1" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView4">

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/nike_yellow" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/nike_light_blue" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/nike_pink" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/nike_green" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="40dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/nike_purple" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardCornerRadius="40dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/nike_dark" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>